# poolcore

./: .clang-format  .gitignore  README.md  database.txt  pool.cfg.json
doc/: database.md  httpApi.md  pool.cfg.example.json
src/: CMakeLists.txt
src/blockmaker/: CMakeLists.txt  KeccakP-800-reference.cpp  aes.c  aes_helper.cpp  blake.c  bmw.c  btc.cpp  btcLike.cpp  cubehash.cpp  dash.cpp  dgb.cpp  doge.cpp  echo.cpp  eth.cpp  ethash.c  groestl.c  jh.c  keccak.c  ltc.cpp  luffa.cpp  odocrypt.cpp  scrypt.c  scrypt.cpp  sha256.c  sha3.c  shavite.cpp  simd.cpp  skein.cpp  stratumWork.cpp  tiny_sha3.c  x11.cpp  xec.cpp  xpm.cpp  zec.cpp
src/btc/: CMakeLists.txt  btc.cpp
src/cmake/: FindFlatBuffers.cmake  Findleveldb.cmake  Findlibp2p.cmake  ProjectLibp2p.cmake  ProjectMPIR.cmake  ProjectSecp256k1.cmake  cxx-pm.cmake
src/cmake/mpir/: msvc.patch  msvc.patch.bat
src/cmake/secp256k1/: CMakeLists.txt  libsecp256k1-config.h.cmake.in
src/dtc/: CMakeLists.txt  dtc.cpp
src/idltool/: CMakeLists.txt  ast.cpp  ast.h  codegen.cpp  codegen.h  codegenCommon.cpp  codegenCommon.h  codegenDiag.cpp  codegenDiag.h  codegenVerbose.cpp  codegenVerbose.h  lexer.l  main.cpp  parser.y
src/include/: loguru.hpp  poolCoreConfig.h.in
src/include/blockmaker/: aes.h  bitcoinBlockTemplate.h  btc.h  btcLike.h  dash.h  dgb.h  divisionChecker.h  doge.h  eth.h  ethash.h  ethereumBlockTemplate.h  ltc.h  merkleTree.h  scrypt.h  serialize.h  serializeJson.h  serializeUtils.h  sha256.cpu.h  sha256.h  sha3.h  sph_blake.h  sph_bmw.h  sph_groestl.h  sph_jh.h  sph_keccak.h  stratumWork.h  tiny_sha3.h  x11.h  xec.h  xpm.h  xvector.h  zec.h
src/include/idltool/: jsonReadBool.h  jsonReadDouble.h  jsonReadError.h  jsonReadHexData.h  jsonReadInt.h  jsonReadString.h  jsonReadUInt.h  jsonScanner.h  jsonWriteBool.h  jsonWriteDouble.h  jsonWriteHexData.h  jsonWriteInt.h  jsonWriteString.h  jsonWriteUInt.h  schema.h  serialize.h
src/include/poolcommon/: arith_uint256.h  baseBlob.h  bech32.h  bigNum.h  coroutineJoin.h  crc32.h  datFile.h  debug.h  endiantools.h  file.h  hashTypes.h  httpClient.h  intrusive_ptr.h  jsonConfigParser.h  jsonSerializer.h  mappedTypes.h  mergeSorted.h  money.h  multiCall.h  numberLiteral.h  path.h  periodicTimer.h  poolapi.h  serialize.h  smallStream.h  tagged.h  tagged_ptr.h  taskHandler.h  timeTypes.h  totp.h  types.h  uint.h  uint256.h  uint_str.h  userTypes.h  utils.h
src/include/poolconfig/: config.h
src/include/poolcore/: accounting.h  accountingApi.h  accountingData.h  accountingPayouts.h  accountingState.h  backend.h  backendData.h  base58.h  bitcoinNetworkClient.h  bitcoinRPCClient.h  blockTemplate.h  clientDispatcher.h  coinLibrary.h  complexMiningStats.h  dbFormat.h  ethUserTypes.h  ethereumNetworkClient.h  ethereumRPCClient.h  feeEstimator.h  kvdb.h  leveldbBase.h  miningAddress.h  plugin.h  poolCore.h  poolInstance.h  priceFetcher.h  rocksdbBase.h  shareAccumulator.h  shareLog.h  statistics.h  statsData.h  statsMergeOperator.h  thread.h  uint256.h  usermgr.h  workSummary.h  workTypes.h
src/include/poolinstances/: btc.h  common.h  fabric.h  stratum.h  stratumMsg.h  stratumWorkStorage.h  xpm.h  zmq.h
src/include/poolrpc/: poolrpc.h
src/loguru/: loguru.cpp
src/migrate/: CMakeLists.txt  migrate.cpp  migratecommon.cpp  migratecommon.h  priceHistory.cpp  struct2.cpp  struct2.h  v3.cpp
src/poolcommon/: CMakeLists.txt  arith_uint256.cpp  bech32.cpp  bigNum.cpp  coroutineJoin.cpp  datFile.cpp  file.cpp  hash.idl  httpClient.cpp  pool.fbs  poolapi.cpp  totp.cpp  types.idl  uint256.cpp  utils.cpp
src/poolconfig/: CMakeLists.txt  config.cpp  poolconfig.idl
src/poolcore/: CMakeLists.txt  accounting.cpp  accountingApi.cpp  accountingData.cpp  accountingPayouts.cpp  accountingState.cpp  api.cpp  api.h  backend.cpp  backendData.cpp  base58.cpp  bitcoinNetworkClient.cpp  bitcoinRpc.idl  bitcoinRpcClient.cpp  clientDispatcher.cpp  dbFormat.cpp  ethereumNetworkClient.cpp  ethereumRpc.idl  ethereumRpcClient.cpp  feeEstimator.cpp  kvdb.cpp  leveldbBase.cpp  poolCore.cpp  poolInstance.cpp  priceFetcher.cpp  rocksdbBase.cpp  shareAccumulator.cpp  shareLog.cpp  statistics.cpp  statsData.cpp  statsMergeOperator.cpp  thread.cpp  uint256.cpp  usermgr.cpp  workSummary.cpp
src/poolfrontend/: CMakeLists.txt  config.cpp  config.h  http.cpp  http.h  httpFunctions.idl  main.cpp  poolapi.idl  poolconfig.idl
src/poolinstances/: CMakeLists.txt  btc.cpp  fabric.cpp  protocol.proto  stratumMsg.cpp  stratumWorkStorage.cpp  xpm.cpp
src/poolrpc/: poolrpc.cpp
src/poolrpccmd/: CMakeLists.txt  poolrpccmd.cpp
src/tools/: CMakeLists.txt  addressgen.cpp  noderpc.cpp  passwordHash.cpp
src/unittests/: CMakeLists.txt  arrayLayoutTests.cpp  arrayTests.cpp  idltoolTests.cpp  jsonScannerTests.cpp  statsDataTests.cpp  taggedTests.cpp  test.idl  testDerivedTypes.h  testMappedTypes.h  testUserTypes.h  toplevelTests.cpp
src/xpm/: CMakeLists.txt  xpm.cpp  xpm_stub.cpp
src/zcash/: CMakeLists.txt  zcash.cpp
test/: poolfrontend.py  userApi.py
